# deepj-production

./: .dockerignore  .env  .gitignore  constants.py  generate.py  main.py  midi_io.py  models.py  pyproject.toml  worker.py
testing/: run_test_job.py
testing/test-uploads/v1/: output_494cc6e4-be55-470f-940f-e01b1c9e8766.mid  output_b6c879e1-0b62-493b-bc54-8cb6d8101b3f.mid
testing/test-uploads/v2/: output_c2dea3ea-9e47-49e5-8edc-cb5223741dc2.mid  output_fdd4286a-50c6-4267-a74c-234ee75bb684.mid
