[project]
name = "gen-ai-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "mido>=1.3.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
